add frontend building
